src/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define a hierarchical custom setting (TriggerSettings__c) and create a CheckBox field per Trigger to turn the trigger off/on.</description>
    <fields>
        <fullName>APTS_AgreementLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreementLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementPODetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgreementPODetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ApprovalRequestTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_ApprovalRequestTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_AssetTxnHistoryTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssetTxnHistoryTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_BillingPreferenceTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingPreferenceTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_BillingScheduleTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_BillingScheduleTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_BillingSettingTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_BillingSettingTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ContractedKPISLATrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContractedKPISLATrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Credit_Memo_Line_Item__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Apttus_Billing__CreditMemoLineItem__c(credit Memo Line item) trigger flag</description>
        <label>Credit Memo Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Credit_Memo_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>credit Memo  trigger flag</description>
        <label>Credit Memo Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ExternalOrderSummaryItem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_ExternalOrderSummaryItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IncentivePayoutScheduleTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncentivePayoutScheduleTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IncentiveTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IncentiveTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IndexContractTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IndexContractTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IndexCountryDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IndexCountryDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Index_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Index Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_InvoiceLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as a part of Kauri Nov&apos;18 Releasae</description>
        <label>APTS_InvoiceLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_LineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MergeEventTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MergeEventTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MeterReadingDataTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_MeterReadingDataTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_OrderFulfillmentLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable or disable OrderFulfillmentLineItem Trigger</description>
        <inlineHelpText>Enable or disable OrderFulfillmentLineItem Trigger</inlineHelpText>
        <label>OrderFulfillmentLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_OrderLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order line item trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_OrderUsagePriceTierTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OrderUsagePriceTierTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Adjustment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Adjustment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_PriceRuleEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceRuleEntry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_QuoteAdjustmentLITrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuoteAdjustmentLITrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_QuoteLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuoteLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_SelloutDataItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_SelloutDataItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_UpdateOrderLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APTS_UpdateOrderLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_UsageInputTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UsageInputTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_VolumeObligationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VolumeObligationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountLocationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountLocationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTaxTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountTaxTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdjustmentLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for APTS_AdjustmentLineItemTriggerHandler Mute/Unmute</description>
        <label>AdjustmentLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgreementAdobeEsign__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AgreementAdobeEsign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssetLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankDetailsTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BankDetailsTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchLogEventTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to mute Batch Log Event Platform Event Trigger. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>BatchLogEventTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BulkDataSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to switch on and off if you are doing bulk data upload in the system. When checked it means the data loader will not be pass thru or allow the user to upload.</description>
        <label>BulkDataSwitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CaseTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConsentTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConsentTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentDocumentLinkTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ContentDocumentLinkTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultBillToShipToTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DefaultBillToShipToTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailMessageTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EmailMessageTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailMessageTrigger_c__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EmailMessageTrigger__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedItemTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FeedItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FreqConversionRate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FreqConversionRate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationLogTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IntegrationLogTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAETransaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAETransaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LeadTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPSDetailTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPSDetailTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperatingScheduleTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OperatingScheduleTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OperationalTaskTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OperationalTaskTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OpportunityTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartRequestLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PartRequestLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartRequestTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PartRequestTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerfectExperienceSurveyTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PerfectExperienceSurveyTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhysicalAssetTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PhysicalAssetTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreBidApprovalTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreBidApprovalTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceLineItemTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProdClassificationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProdClassificationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProdOptionCompTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProdOptionCompTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProdReplacementTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProdReplacementTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductConfigurationTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ProductConfigurationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductTranslationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProductTranslationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProductTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuoteProposalTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>QuoteProposalTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedInvoiceTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RelatedInvoiceTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RescheduleRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RescheduleRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResourceTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KTS-1931: Field used as flagging to enable or disable a trigger for Resource Object</description>
        <label>ResourceTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RouteLineItemTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RouteLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_FormAPImethod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM_FormAPImethod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesOrgDataTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox field to mute Sales Org Data Trigger. Created as part of Kauri Wave 3 Nov&apos;18 Release.</description>
        <label>SalesOrgDataTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaskTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaxTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TerritoryModelTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TerritoryModelTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UOMConversionTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UOMConversionTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONEAccountLocationTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WSONEAccountLocationTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONEAccountTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WSONEAccountTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrderLineItemTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WorkOrderLineItemTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrderTriggerObject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WorkOrderTriggerObject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkOrderTrigger__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WorkOrderTrigger</label>
        <type>Checkbox</type>
    </fields>
    <label>TriggerSettings</label>
</CustomObject>